feat: 命令改成 jdk21的 & 测试成功输出成 json